--- a/source/GUI/WinAPI/Options/guiOptionsWINAPI_Main.rc
+++ b/source/GUI/WinAPI/Options/guiOptionsWINAPI_Main.rc
@@ -21,8 +21,9 @@ FONT 8, "Ms Shell Dlg"
     AUTOCHECKBOX    "&Portable mode", IDC_CHECKBOX_PORTABLEMODE, 8, 8, 253, 10
     AUTOCHECKBOX    "&Check for new versions on startup", IDC_CHECKBOX_CHECKNEWVERSION, 8, 18, 253, 10
     AUTOCHECKBOX    "&Monitor clipboard for downloadable URLs", IDC_CHECKBOX_MONITORCLIPBOARD, 8, 28, 253, 10
-    CONTROL         "&Language:", IDC_LABEL_LANGUAGE, WC_STATIC, NOT WS_GROUP | SS_LEFTNOWORDWRAP | SS_NOTIFY, 8, 44, 74, 10
-    EDITTEXT        IDC_EDIT_LANGUAGE, 82, 42, 179, 14, ES_AUTOHSCROLL
+    AUTOCHECKBOX    "&Disable OpenSSL warning", IDC_CHECKBOX_DISABLEOPENSSLWARNING, 8, 38, 253, 10
+    CONTROL         "&Language:", IDC_LABEL_LANGUAGE, WC_STATIC, NOT WS_GROUP | SS_LEFTNOWORDWRAP | SS_NOTIFY, 8, 54, 74, 10
+    EDITTEXT        IDC_EDIT_LANGUAGE, 82, 52, 179, 14, ES_AUTOHSCROLL
     PUSHBUTTON      "Create shortcut on &desktop", IDC_BUTTON_SHORTCUTONDESKTOP, 8, 67, 253, 14
     PUSHBUTTON      "Create shortcut in &Start menu", IDC_BUTTON_SHORTCUTINSTARTMENU, 8, 84, 253, 14
 }
