--- a/source/ytd.cfg
+++ b/source/ytd.cfg
@@ -40,4 +40,4 @@
 -O"lib\pepak\delphi5;lib\pepak;lib\pepak\apiform;lib\synapse\source\lib;lib\perlregex;lib\rtmpdump;lib\msdl\src;lib\dxgettext\delphi5;lib\nativexml;lib\lkjson;lib\scizipfile;Units"
 -I"lib\pepak\delphi5;lib\pepak;lib\pepak\apiform;lib\synapse\source\lib;lib\perlregex;lib\rtmpdump;lib\msdl\src;lib\dxgettext\delphi5;lib\nativexml;lib\lkjson;lib\scizipfile;Units"
 -R"lib\pepak\delphi5;lib\pepak;lib\pepak\apiform;lib\synapse\source\lib;lib\perlregex;lib\rtmpdump;lib\msdl\src;lib\dxgettext\delphi5;lib\nativexml;lib\lkjson;lib\scizipfile;Units"
--DPEPAK;PEPAK_YTD;
+-DPEPAK;PEPAK_YTD;DEBUG
